# Husk

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  deny.toml  toml.example
.github/workflows/: ci.yml  release.yml
crates/homelab-core/: Cargo.toml
crates/homelab-core/examples/: scan_nodes.rs
crates/homelab-core/src/: client.rs  config.rs  error.rs  lib.rs
crates/homelab-core/src/models/: inference.rs  llama.rs  mod.rs  ollama.rs  opnsense.rs  proxmox.rs
crates/homelab-core/src/tools/: inference.rs  mod.rs  opnsense.rs  proxmox.rs
crates/homelab-core/tests/: client_integration_test.rs
crates/homelab-mcp/: Cargo.toml
crates/homelab-mcp/src/: main.rs
src/: handler.rs  llm.rs  main.rs  ollama.rs  redis.rs  search.rs
