[package]
name = "homelab-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "cache",
    "builder",
    "rustls_backend",
] }
tokio = { workspace = true }
# Own reqwest version — serenity 0.12 pulls reqwest 0.12 / hyper 1.x
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
# Long-term memory. Exact `=` pin required — pre-release, never matched by caret ranges.
context-forge = { version = "=0.5.0-beta.2", features = ["distill-http"] }
