[package]
name = "husk"
version = "0.1.0"
edition = "2021"
description = "A Discord bot backed by a local LLM (Ollama) with long-term memory, web search, and a configurable persona."
license = "Apache-2.0"
repository = "https://github.com/asvarnon/husk"
readme = "README.md"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "cache",
    "builder",
    "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
# Own reqwest version — serenity 0.12 pulls reqwest 0.12 / hyper 1.x
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
# Long-term memory. Exact `=` pin: 0.5.0 is the first stable, and pinning keeps
# distiller behavior reproducible across the bot's deploy hosts.
context-forge = { version = "=0.5.0", features = ["distill-http"] }
