[package]
name = "homelab-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
homelab-core = { path = "../homelab-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { version = "1.6.0", features = ["server", "transport-io"] }
# In a real implementation, we'd use a proper MCP crate here.
# For now, we'll placeholder.
